fix grid gaps and add max-width on wrapper

--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -6,6 +6,7 @@
   justify-content: space-between;
   align-items: center;
   width: 90%;
+  max-width: $wrapper__max-width;
   margin: 0 auto;
 
   @media(min-width: $screen__s){
